Updated JS Docs and Model Instruct
