# apps/docs/src/pages/api/crawler/index.ts
@@ -3,13 +3,6 @@ import { General } from "@/openai/engines/crawler/plugin/plugins/general";
 import { NextApiRequest, NextApiResponse } from "next";
 import NextCors from "nextjs-cors";
 
-/**
- * @name POST /api/crawler/analysis
- * @description This endpoint is used to analyze a url and returns a string analysis of the url.
- * @param {string} url - The url to analyze.
- * @param {string} query - A query to ask about the url such as "What is this url about?" or "Summarize each section of the url".
- * @returns {string} Analysis of the url.
- */
 export default async function handler(
   req: NextApiRequest,
   res: NextApiResponse
